[metadata]
name = pyramid_basemodel
version = 0.4.0
ulr = http://github.com/thruflo/pyramid_basemodel
description = file: README.md
long_description = file: README.md, CHANGES.md
keywords = pyramid, sqlalchemy
license = UNLICENSE
author = James Arthur
maintainer = Grzegorz Śliwiński
maintainer_email = fizyk+pypi@fizyk.net.pl
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: The Unlicense (Unlicense)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Pyramid
    Topic :: Database :: Front-Ends
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find:
package_dir =
    =src
install_requires =
    pyramid
    pyramid_tm
    requests
    SQLAlchemy
    zope.interface
    zope.sqlalchemy
    python-slugify
    inflect

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-cov
    mock

[wheel]
universal = 1

[tool:pytest]
xfail_strict=True

[pydocstyle]
ignore = D203,D212

[pycodestyle]
max-line-length = 120
exclude = docs/*,build/*,venv/*
