[metadata]
name = pyramid_basemodel
version = 0.5.0
url = http://github.com/fizyk/pyramid_basemodel
description = pyramid_basemodel - a thin, low level SQLAlchemy bindings to pyramid
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
keywords = pyramid, sqlalchemy
license = UNLICENSE
author = James Arthur
maintainer = Grzegorz Śliwiński
maintainer_email = fizyk+pypi@fizyk.net.pl
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: The Unlicense (Unlicense)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Pyramid
    Topic :: Database :: Front-Ends
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find:
package_dir =
    =src
install_requires =
    pyramid
    pyramid_tm
    requests
    SQLAlchemy
    zope.interface
    zope.sqlalchemy
    python-slugify
    inflect
    typing-extensions; python_version<'3.8'

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-cov
    mock
    requests-mock

[wheel]
universal = 1

[tool:pytest]
xfail_strict=True

[pydocstyle]
ignore = D203,D212

[pycodestyle]
max-line-length = 120
exclude = docs/*,build/*,venv/*
# NOTE: All relative paths are relative to the location of this file.

[pytype]

# Space-separated list of files or directories to exclude.
exclude =
    **/*_test.py
    **/test_*.py

# Space-separated list of files or directories to process.
inputs =
    src/

# Keep going past errors to analyze as many files as possible.
keep_going = False

# Run N jobs in parallel. When 'auto' is used, this will be equivalent to the
# number of CPUs on the host system.
jobs = 4

# All pytype output goes here.
output = .pytype

# Paths to source code directories, separated by ':'.
pythonpath =
    .

# Python version (major.minor) of the target code.
python_version = 3.8

# Check attribute values against their annotations. This flag is temporary and
# will be removed once this behavior is enabled by default.
check_attribute_types = False

# Check container mutations against their annotations. This flag is temporary
# and will be removed once this behavior is enabled by default.
check_container_types = False

# Check parameter defaults and assignments against their annotations. This flag
# is temporary and will be removed once this behavior is enabled by default.
check_parameter_types = False

# Check variable values against their annotations. This flag is temporary and
# will be removed once this behavior is enabled by default.
check_variable_types = False

# Comma or space separated list of error names to ignore.
disable =
    pyi-error

# Don't report errors.
report_errors = True

# Experimental: Infer precise return types even for invalid function calls.
precise_return = False

# Experimental: solve unknown types to label with structural types.
protocols = False

# Experimental: Only load submodules that are explicitly imported.
strict_import = False
