[metadata]
name = pyramid_basemodel
version = 0.5.2
url = http://github.com/fizyk/pyramid_basemodel
project_urls =
    Bug Tracker = https://github.com/fizyk/pyramid_basemodel/issues
    Changelog = https://github.com/fizyk/pyramid_basemodel/blob/v0.5.2/CHANGES.rst
description = pyramid_basemodel - a thin, low level SQLAlchemy bindings to pyramid
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = pyramid, sqlalchemy
license = UNLICENSE
author = James Arthur
maintainer = Grzegorz Śliwiński
maintainer_email = fizyk+pypi@fizyk.dev
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: The Unlicense (Unlicense)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Pyramid
    Topic :: Database :: Front-Ends
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = pyramid_basemodel
install_requires =
    pyramid
    pyramid_tm
    requests
    SQLAlchemy
    zope.interface
    zope.sqlalchemy
    python-slugify
    inflect

[options.extras_require]
tests =
    pytest
    pytest-cov
    mock
    requests-mock

[wheel]
universal = 1

[tool:pytest]
xfail_strict=True

[pydocstyle]
ignore = D203,D212

[pycodestyle]
max-line-length = 120
exclude = docs/*,build/*,venv/*
